--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -1,13 +1,6 @@
-/* `fontawesome 
-----------------------------------------------------------------------------------------------------*/
-@import url(https://weloveiconfonts.com/api/?family=fontawesome);
-
-/* fontawesome */
-[class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif;
-}
 /* `Basic HTML
 ----------------------------------------------------------------------------------------------------*/
+
 * {
   cursor: default;
 }
@@ -18,8 +11,8 @@ body {
 }
 
 body {
-  background: #0D0208;
-  font: 12px/1;
+  background: white;
+  font: 12px/1 'Lucida Grande', Arial, 'Liberation Sans', FreeSans, sans-serif;
 }
 
 a {
@@ -81,8 +74,8 @@ div.ui-resizable-handle {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
   -webkit-background-clip: padding-box;
-  color: #00FF41;
-  font-size: 14px;
+  color: black;
+  font-size: 11px;
   font-weight: bold;
   line-height: 1.3;
   padding: 6px 1px 6px;
@@ -105,7 +98,7 @@ div.ui-resizable-handle {
 .icon.ui-draggable-dragging{
   background-position: 0 0;
   background-repeat: repeat;
-  border: 2px dotted white;
+  border: 2px dotted black;
   padding: 5px 0 5px;
   cursor: pointer;
 }
@@ -123,10 +116,10 @@ div.ui-resizable-handle {
 ----------------------------------------------------------------------------------------------------*/
 
 .window {
-  background: #00FF41;
+  background: #fff;
   border: 1px solid #000;
   border-radius: 1px;
-  color: #00FF41;
+  color: #000;
   display: none;
   overflow: hidden;
   width:  625px;
@@ -137,10 +130,10 @@ div.ui-resizable-handle {
 }
 
 .windowx {
-  background: #0D0208;
-  border: 1px solid #00FF41;
+  background: #fcf8cb;
+  border: 1px solid #000;
   border-radius: 1px;
-  color: #00FF41;
+  color: #000;
   display: none;
   overflow: hidden;
   z-index: 5;
@@ -184,8 +177,8 @@ div.ui-resizable-handle {
 }
 
 .window_top {
-  background: #00FF41;
-  color: #0D0208;
+  background: #06c url(../images/gui/bar_top_link.png) repeat-x;
+  color: #fff;
   font-weight: bold;
   overflow: hidden;
   line-height: 30px;
@@ -201,14 +194,14 @@ div.ui-resizable-handle {
 }
 
 .window_bottom {
-  background: #00FF41;
+  background: #fff url(../images/gui/bar_top.png) repeat-x left bottom;
   border-top: 1px solid #bbb;
   font-size: 11px;
   font-weight: bold;
   line-height: 20px;
   overflow: hidden;
   text-align: center;
-  text-shadow: #00FF41 0 1px 1px;
+  text-shadow: #fff 0 1px 1px;
   height: 20px;
   left: 1px;
   right: 1px;
@@ -280,7 +273,7 @@ div.ui-resizable-handle {
 }
 
 .window_main {
-  background: #0D0208;
+  background: #fff;
   min-height: 100%;
 }
 
@@ -294,6 +287,51 @@ div.ui-resizable-handle {
 
 .window_full .window_inner {
   bottom: -1px;
+}
+
+/* `Table >> Data
+----------------------------------------------------------------------------------------------------*/
+
+table.data {
+  width: 100%;
+  white-space: nowrap;
+  user-select: none;
+}
+
+table.data th,
+table.data td {
+  padding: 5px 10px;
+  vertical-align: middle;
+}
+
+table.data th {
+  background: #fff url(../images/gui/bar_top.png) repeat-x left bottom;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  font-weight: bold;
+  text-shadow: #fff 0 1px 1px;
+  white-space: nowrap;
+}
+
+table.data th:first-child {
+  border-left: 0;
+}
+
+table.data img {
+  display: block;
+}
+
+table.data tbody tr:nth-child(even) td {
+  background: #def;
+}
+
+table.data tbody tr.active td {
+  background: #06c url(../images/gui/bar_top_link.png) repeat-x;
+  color: #fff;
+}
+
+th.shrink {
+  width: 1%;
 }
 
 /* `Bar Bottom
@@ -330,7 +368,6 @@ div.ui-resizable-handle {
   bottom: 0;
   min-width: 700px;
   min-height: 500px;
-  background: #0D0208;
 }
 
 /* `Explorer
@@ -365,8 +402,8 @@ div.ui-resizable-handle {
   -webkit-user-select: none;
   -ms-user-select: none;
   
-  color: #00FF41;
-  font-size: 12px;
+  color: black;
+  font-size: 11px;
   font-weight: bold;
   line-height: 1.3;
   padding: 9px 0px 6px;
@@ -480,7 +517,7 @@ div.ui-resizable-handle {
   -webkit-user-select: none;
   -ms-user-select: none;
   
-  color: #00FF41;
+  color: black;
   font-size: 11px;
   font-weight: bold;
   line-height: 1.3;
@@ -515,7 +552,7 @@ div.ui-resizable-handle {
 }
 
 .top p{
-  color: #00FF41;
+  color: #000;
   padding: 5px;
 }
 
@@ -532,9 +569,8 @@ div.ui-resizable-handle {
 }
 
 .textimg p{
-  background-color: #0D0208;
-  border: 1px solid #00FF41;
-  color: #00FF41;
+  background-color: #fcf8cb;
+  border: 1px solid #000;
   border-radius: 1px;
   padding: 10px;
   position:absolute;
