--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,100 +1,72 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&family=Oswald:wght@400;500&family=Roboto&display=swap');
+
+body, html {
   background: white;
-  font: 12px/1 'Lucida Grande', Arial, 'Liberation Sans', FreeSans, sans-serif;
 }
 
-.abs {
-    position: absolute !important;
-    top: auto;
-    left: auto;
-    right: auto;
-    bottom: auto;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-  }
-  
-  .align_center {
-    text-align: center;
-  }
-  
-  .align_right {
-    text-align: right;
-  }
-  
-  .float_left {
-    float: left;
-  }
-  
-  .float_right {
-    float: right;
-  }
+.top_bar{
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 
-  .window {
-    background: #fff;
-    border: 1px solid #000;
-    border-radius: 1px;
-    color: #000;
-    overflow: hidden;
-    width:  625px;
-    height: 300px;
-    top: 30px;
-    left: 120px;
-  }
-  
-  .window_top {
-    background: #06c url(../images/gui/bar_top_link.png) repeat-x;
-    color: #fff;
-    font-weight: bold;
-    overflow: hidden;
-    line-height: 30px;
-    padding: 0 10px;
-    text-shadow: #000 0 1px 1px;
-    height: 30px;
-  }
-  
-  .window_top img {
-    float: left;
-    margin: 6px 5px 0 0;
-    image-rendering: pixelated;
-  }
-  
-  .window_bottom {
-    background: #fff url(../images/gui/bar_top.png) repeat-x left bottom;
-    border-top: 1px solid #bbb;
-    font-size: 11px;
-    font-weight: bold;
-    line-height: 20px;
-    overflow: hidden;
-    text-align: center;
-    text-shadow: #fff 0 1px 1px;
-    height: 20px;
-    left: 1px;
-    right: 1px;
-    bottom: 1px;
-  }
+  font-family: 'Mukata', sans-serif;
+  font-weight: 600;
+  padding-bottom: 165px;
+}
 
-  .window_inner {
-    padding: 1px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .window_content {
-    background: url(../images/gui/window_content.gif) repeat-y;
-    line-height: 1.5;
-    overflow: auto;
-    top: 32px;
-    left: 1px;
-    right: 1px;
-    bottom: 23px;
-  }
-  
-  .window_main {
-    background: #fff;
-    min-height: 100%;
-  }
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33%;
+  padding: 10px;
+}
+
+.column h1 {
+  font-size: 24px;
+}
+
+.column h2 {
+  font-size: 24px;
+  position: relative;
+  bottom: 4px;
+  left: 15%;
+}
+
+.search {
+  position: relative;
+  white-space: nowrap;
+  float: right;
+}
+
+.search input {
+  border: 2px solid black;
+  font-size: 24px;
+  font-family: 'Mukata', sans-serif;
+  font-weight: 600;
+  color: black;
+}
+
+.search button {
+  position: relative;
+  right: 45px;
+  font-size: 24px;
+  background: none;
+  border: none;
+}
+
+.search button:hover {
+  cursor: pointer;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  display: table;
+  clear: both;
+}
+
